--- a/src/index.scss
+++ b/src/index.scss
@@ -9,6 +9,7 @@
   font-family: 'Montserrat', sans-serif;
 }
 
+
 .characters-header
 {
   display: flex;
@@ -49,7 +50,6 @@
 .search-block input
 {
   padding-left: 7px;
-  margin-right: 30px;
   height: 40px;
   width: 100%;
   border: 1px solid #7a7a7a;
@@ -63,11 +63,6 @@
   border: none;
   color: #ffffff;
   font-size: 20px;
-}
-
-.search-block button:hover
-{
-  background-color: #f5a61d;
 }
 
 header
@@ -85,11 +80,17 @@ header
   margin: 10px;
 }
 
+.navigation:hover > :not(:hover)
+{
+  filter: blur(0.5px);
+  opacity: 0.8;
+}
+
 footer
 {
   background-color: #555555;
   flex-shrink: 0;
-  margin-top: 600px;
+  margin-top: 30px;
 }
 
 .footer-box
@@ -119,6 +120,7 @@ footer
   font-weight: bold;
   margin: 10px;
   color: #feba42;
+  transition: 0.1s ease;
 }
 
 .navigation-button-active
@@ -129,6 +131,7 @@ footer
   margin: 10px;
   color: #feba42;
   text-decoration: underline;
+  transition: 0.1s ease;
 }
 
 
@@ -158,11 +161,14 @@ footer
 
 .card
 {
-  display: flex;
+  padding: auto;
+  display: subgrid;
+  place-self: center;
   flex-direction: column;
   border: 1px solid #7a7a7a;
-  height: 100%;
-  margin: 15px;
+  height: 250px;
+  width: 300px;
+  margin: 15px 0px 15px;
   transition: transform 0.2s;
   border-radius: 20px;
 }
@@ -200,11 +206,9 @@ footer
 
 .cards
 {
-  margin-left: 30px;
-  margin-right: 30px;
+  margin: 0px 30px 0px;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
-  grid-gap: 15px;
+  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
 }
 
 .content-page
@@ -239,10 +243,17 @@ footer
   font-weight: bold;
 }
 
-.def-text
+.link-to-object
 {
+  text-decoration: none;
+  color: #333333;
   font-size: 20px;
-  font-weight: 100;
+  font-weight: 300;
+}
+
+.link-to-object:hover
+{
+  text-decoration: underline;
 }
 
 .content-list
@@ -254,5 +265,47 @@ footer
   padding-left: 50px;
 }
 
+.pagination
+{
+  padding-top: 20px;
+  border-top: 1px solid #dbdbdb;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 25%;
+  margin: auto;
+}
 
+.pagination button
+{
+  background-color: #ffffff;
+  border: none;
+  color: #ed1b3b;
+  height: 50px;
+  width: 50px;
+  font-size: 1rem;
+}
 
+.pagination span
+{
+  font-size: 1rem;
+}
+
+.pagination .pag-btn
+{
+  background-color: #feba42;
+  color: #ffffff;
+}
+
+.hidden
+{
+  display: none;
+}
+
+.loadings
+{
+  display: flex;
+  justify-content: center;
+  margin: 200px auto;
+  font-size: 30px;
+}
