--- a/src/index.scss
+++ b/src/index.scss
@@ -216,12 +216,6 @@ footer
   object-fit: cover;
 }
 
-.card input[type=checkbox]
-{
-  border: none;
-  size: 50px;
-}
-
 .cards
 {
   margin: 0px 30px 0px;
@@ -352,3 +346,56 @@ footer
   -webkit-text-stroke: 2px #feba42;
 }
 
+.loading
+{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin: 10px 0 10px 0;
+}
+
+.loading span
+{
+  display: inline-block;
+  vertical-align: middle;
+  width: .6em;
+  height: .6em;
+  margin: .19em;
+  background: #9d0208;
+  border-radius: .6em;
+  animation: loading 1s infinite alternate;
+}
+
+.loading span:nth-of-type(2) {
+  background: #d00000;
+  animation-delay: 0.2s;
+}
+.loading span:nth-of-type(3) {
+  background: #dc2f02;
+  animation-delay: 0.4s;
+}
+.loading span:nth-of-type(4) {
+  background: #e85d04;
+  animation-delay: 0.6s;
+}
+.loading span:nth-of-type(5) {
+  background: #f48c06;
+  animation-delay: 0.8s;
+}
+.loading span:nth-of-type(6) {
+  background: #faa307;
+  animation-delay: 1.0s;
+}
+.loading span:nth-of-type(7) {
+  background: #ffba08;
+  animation-delay: 1.2s;
+}
+
+@keyframes loading {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
